--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
     </div>
   </div>
 </div>
-<!-- Restaurant Menu Section -->
 
 <!-- Portfolio Section -->
 <div id="portfolio">
@@ -344,13 +343,18 @@
 <!-- Call Reservation Section -->
 <div id="call-reservation" class="text-center">
   <div class="container">
-    <h2>Pozovite nas na <strong><a href="tel:062925232" style="color: white;">062/925 232</a></strong></h2>
+    <h2>Pozovite nas na <strong><a href="tel:+387062925232" style="color: white;">062/925 232</a></strong></h2>
   </div>
 </div>
 <!-- Contact Section -->
 <div id="contact" class="text-center">
   <div class="container">
-    <div class="section-title text-center">
+      <div class="section-title text-center">
+          <h2>Gde se nalazimo</h2>
+          <hr>
+        </div>
+        <div class="col-md-10" id="map"></div>
+    <div class="col-md-12 section-title text-center" style="margin: 90px 0 0 10px;">
       <h2>Kontaktirajte nas</h2>
       <hr>
       <p>Ako imate predloge, sugestije ili kritike, pišite nam, vaše mišljenje nam pomaže da budemo još bolji.</p>
@@ -360,30 +364,25 @@
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Ime" requi#0000ff="requi#0000ff">
+              <input type="text" id="name" class="form-control" placeholder="Ime" required="required">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" requi#0000ff="requi#0000ff">
+              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
               <p class="help-block text-danger"></p>
             </div>
           </div>
         </div>
         <div class="form-group">
-          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Poruka" requi#0000ff></textarea>
+          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Poruka" required></textarea>
           <p class="help-block text-danger"></p>
         </div>
         <div id="success"></div>
         <button type="submit" class="btn btn-custom btn-lg">Pošalji</button>
       </form>
     </div>
-    <div class="col-md-12 section-title text-center" style="margin: 90px 0 0 10px;">
-      <h2>Gde se nalazimo</h2>
-      <hr>
-    </div>
-    <div class="col-md-10" id="map"></div>
   </div>
 </div>
 <div id="footer">
