minor color change

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             
             Ovaj web sajt smo napravili  na  zahtev  onih  koji su želeli  da on line vide  veš mašine, sušare, sudo mašine, šporete, ugradnu tehniku, frižidere, zamrzivače, televizore i drugu robu koju imamo u ponudi.
             
-            Dođite i uverite se u sve što smo napisali i sigurno ćete biti zadovoljni našim asortimanom kvalitetne polovne bele tehnike  iz Nemačke.</p>
+            Dođite i uverite se u sve što smo napisali i sigurno ćete biti zadovoljni našim asortimanom kvalitetne polovne bijele tehnike  iz Nemačke.</p>
           </div>
       </div>
     </div>
@@ -343,7 +343,7 @@
 <!-- Call Reservation Section -->
 <div id="call-reservation" class="text-center">
   <div class="container">
-    <h2>Pozovite nas na <strong><a href="tel:+387062925232" style="color: white;">062/925 232</a></strong></h2>
+    <h2>Pozovite nas na <strong><a href="tel:+38762925232" style="color: white;">062/925 232</a></strong></h2>
   </div>
 </div>
 <!-- Contact Section -->
@@ -405,8 +405,8 @@
     <div class="col-md-4">
       <h3>Kontakt:</h3>
       <div class="contact-item">
-        <p>Telefon: <a href="tel:055424236">055/424 236</a></p>
-        <p>Mobilni: <a href="tel:062925232">062/925 232</a></p>
+        <p>Telefon: <a href="tel:+38755424236">055/424 236</a></p>
+        <p>Mobilni: <a href="tel:+38762925232">062/925 232</a></p>
         <p>Email: <a href="mailto:elma@gmail.com">elma@gmail.com</a></p>
       </div>
     </div>
